# fall2025_froggy_fresh

./: .env  .gitignore  Data_Augmentation.py  README.md  Sprint 3 Peer Reviews.docx  Test_LeapFrog.ipynb  Untitled2.ipynb  app.py  data_organization.py  forge.config.js  index.html  model.py  models.py  package-lock.json  package.json  predict.py  rename.py  tailwind.config.js  templates.py  tsconfig.json  vite.config.ts
backend/: app.py  graph_data.py  model_configs.json  process_images.py  pyproject.toml  requirements.txt
electron/: index.js
modelOne/: predict.py  train.py
modelTwo/: model.py  train.py
sprint 2/: Ahmed_Omer_review.docx
sprints/sprint 2/: Ahmed_Samir_review.docx  christopherFeedback.docx
sprints/sprint 4/: Ahmed Sprint 4 Peer Review.docx  Sprint 4 Peer Review.docx  christopherFeebac.docx
sprints/sprint3/: Christopherfeedback.docx
src/leapfrog.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/main/: main.ts
src/renderer/: main.tsx  vite.config.ts
src/renderer/app/: globals.css  layout.tsx  page.tsx
src/renderer/components/: BackButton.tsx  Dashboard.tsx  FrogChart.tsx  ModelManager.tsx  ResultsView.tsx  SortView.tsx  ThemeToggle.tsx
test/: app.py  config.py  services.py  templates.py
